examples/test/testpolicy14123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14123
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key16: value12
      key38: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value4
          key39: value36
      podSelector:
        matchLabels:
          key40: value46
